--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: Pretendard;
+    src: url(Fonts/Pretendard-Regular.woff) format('woff');
+    font-weight: normal;
+}
+@font-face {
+    font-family: Pretendard;
+    src: url(Fonts/Pretendard-Bold.woff) format('woff');
+    font-weight: bold;
+}
+@font-face {
+    font-family: Pretendard;
+    src: url(Fonts/Pretendard-Light.woff) format('woff');
+    font-weight: lighter;
+}
+@font-face {
+    font-family: Danjo;
+    src: url(Fonts/Danjo-bold-Regular.woff) format('woff');
+    font-weight: normal;
+}
+* {
+    font-family: 'Pretendard';
+}
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
