--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,17 @@
     src: url(Fonts/Danjo-bold-Regular.woff) format('woff');
     font-weight: normal;
 }
+
+.text-overflow {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    word-break: break-word;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
 * {
     font-family: 'Pretendard';
 }
