--- a/src/index.css
+++ b/src/index.css
@@ -6,21 +6,25 @@
     font-family: Pretendard;
     src: url(Fonts/Pretendard-Regular.woff) format('woff');
     font-weight: normal;
+    font-display: swap;
 }
 @font-face {
     font-family: Pretendard;
     src: url(Fonts/Pretendard-Bold.woff) format('woff');
     font-weight: bold;
+    font-display: swap;
 }
 @font-face {
     font-family: Pretendard;
     src: url(Fonts/Pretendard-Light.woff) format('woff');
     font-weight: lighter;
+    font-display: swap;
 }
 @font-face {
     font-family: Danjo;
     src: url(Fonts/Danjo-bold-Regular.woff) format('woff');
     font-weight: normal;
+    font-display: swap;
 }
 
 .text-overflow {
@@ -39,14 +43,21 @@
     }
 }
 
-* {
-    font-family: 'Pretendard';
-}
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif;
+    font-family:
+        'Pretendard',
+        -apple-system,
+        BlinkMacSystemFont,
+        'Segoe UI',
+        'Roboto',
+        'Oxygen',
+        'Ubuntu',
+        'Cantarell',
+        'Fira Sans',
+        'Droid Sans',
+        'Helvetica Neue',
+        sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
