enhancement: 폰트 woff에서 woff2로 변환, 폴더명 변경

--- a/src/index.css
+++ b/src/index.css
@@ -4,25 +4,25 @@
 
 @font-face {
     font-family: Pretendard;
-    src: url(Fonts/Pretendard-Regular.woff) format('woff');
+    src: url(fonts/Pretendard-Regular.woff2) format('woff2');
     font-weight: normal;
     font-display: swap;
 }
 @font-face {
     font-family: Pretendard;
-    src: url(Fonts/Pretendard-Bold.woff) format('woff');
+    src: url(fonts/Pretendard-Bold.woff2) format('woff2');
     font-weight: bold;
     font-display: swap;
 }
 @font-face {
     font-family: Pretendard;
-    src: url(Fonts/Pretendard-Light.woff) format('woff');
+    src: url(fonts/Pretendard-Light.woff2) format('woff2');
     font-weight: lighter;
     font-display: swap;
 }
 @font-face {
     font-family: Danjo;
-    src: url(Fonts/Danjo-bold-Regular.woff) format('woff');
+    src: url(fonts/Danjo-bold-Regular.woff2) format('woff2');
     font-weight: normal;
     font-display: swap;
 }
